...
      remember { mutableStateOf<Map.Entry<fsUid, Profile>?>(null) }
  val (expandedAddUserDialog, setExpandedAddUserDialog) = remember { mutableStateOf(false) }
  val (expandedFriendListDialog, setExpandedFriendListDialog) = remember { mutableStateOf(false) }
  val userProfile = profileViewModel.profile.collectAsState()

  Scaffold(
      modifier = Modifier.testTag("participantListScreen"),
      topBar = {
        TopAppBar(
            modifier = Modifier.testTag("participantListSettingTopBar"),
            title = {
              Text(
                  "Participant Settings", modifier = Modifier.testTag("participantListSettingText"))
            },
            navigationIcon = {
              IconButton(
                  onClick = { navigationActions.goBack() },
                  modifier = Modifier.testTag("goBackButton")) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                        contentDescription = "Localized description")
                  }
            })
      },
...
            text = { Text("Add user", modifier = Modifier.testTag("AddUserButton")) },
            icon = { Icon(Icons.Default.PersonAdd, contentDescription = "Add user") },
            onClick = {
              Log.d("ParticipantListScreen", "Add user button clicked")
              setExpandedAddUserDialog(true)
            },
            modifier = Modifier.testTag("addUserFab"))
      }) { paddingValues ->
        if (selectedTravel != null) {
          LazyColumn(
              modifier =
                  Modifier.padding(paddingValues).fillMaxWidth().testTag("callParticipantColumn")) {
                participants.entries.forEach { participantEntry ->
                  item {
                    // display all participants in travel
                    ParticipantColumn(
                        participant = participantEntry,
                        selectedTravel = selectedTravel!!,
...
                  }
                }
              }
        } else {
          Text(
              "No Travel is selected or the selected travel no longer exists.",
              modifier = Modifier.padding(paddingValues).testTag("noTravelSelected"))
        }

        if (expandedAddUserDialog) {
          val addUserEmail = remember { mutableStateOf("") }
          Dialog(onDismissRequest = { setExpandedAddUserDialog(false) }) {
            Box(
...
                    .testTag("addUserDialogBox")) {
                  Column(
                      modifier =
                          Modifier.fillMaxSize()
                              .padding(16.dp)
                              .verticalScroll(rememberScrollState())
                              .testTag("roleDialogColumn"),
                      horizontalAlignment = Alignment.CenterHorizontally,
                      verticalArrangement = Arrangement.Center) {
                        Text(
                            "Add User by Email",
                            fontWeight = FontWeight.Bold,
                            modifier = Modifier.padding(8.dp).testTag("addUserDialogTitle"))
                        OutlinedTextField(
                            value = addUserEmail.value,
                            onValueChange = { addUserEmail.value = it },
                            label = { Text("Enter User's Email") },
                            placeholder = { Text("Enter User's Email") },
                            modifier = Modifier.testTag("addUserEmailField"))
                        Button(
                            onClick = {
                              profileViewModel.getFsUidByEmail(
                                  addUserEmail.value,
                                  onSuccess = { fsUid ->
                                    inviteUserToTravelViaFsuid(
...
                                        e)
                                    Toast.makeText(
                                            context, "Error: ${e.message}", Toast.LENGTH_SHORT)
                                        .show()
                                  })
                            },
                            modifier = Modifier.testTag("addUserButton")) {
                              Text("Add User")
                            }
                        Button(
                            onClick = {
                              // Show friend list dialog
                              setExpandedFriendListDialog(true)
...
    if (expanded) {
      Dialog(onDismissRequest = { setExpanded(false) }) {
        Box(
            Modifier.fillMaxWidth(1f)
                .height(250.dp)
                .background(MaterialTheme.colorScheme.surface)
                .testTag("participantDialogBox")) {
              Column(modifier = Modifier.padding(8.dp).testTag("participantDialogColumn")) {
                Row(
                    modifier = Modifier.testTag("participantDialogRow"),
                    verticalAlignment = Alignment.CenterVertically,
                    horizontalArrangement = Arrangement.SpaceBetween) {
                      Icon(
                          imageVector = Icons.Default.Person,
                          contentDescription = "Localized description",
                          modifier = Modifier.padding(5.dp).testTag("participantDialogIcon"))
                      TruncatedText(
                          text = participant.value.name,
                          fontWeight = FontWeight.Bold,
                          maxLength = 25,
                          modifier = Modifier.padding(5.dp).testTag("participantDialogName"))
                    }
                TruncatedText(
                    text = participant.value.email,
                    maxLength = 30,
                    fontWeight = FontWeight.Bold,
                    modifier = Modifier.padding(5.dp).testTag("participantDialogEmail"))

                RoleEntryDialog(
                    selectedTravel = selectedTravel,
                    participant = participant,
                    changeRoleAction = setExpandedRoleDialog,
                    removeParticipantAction = {
...
    if (expandedRoleDialog) {
      Dialog(onDismissRequest = { setExpandedRoleDialog(false) }) {
        Box(
            Modifier.fillMaxWidth(1f)
                .height(250.dp)
                .background(MaterialTheme.colorScheme.surface)
                .testTag("roleDialogBox")) {
              Column(
                  modifier = Modifier.fillMaxSize().padding(16.dp).testTag("roleDialogColumn"),
                  horizontalAlignment = Alignment.CenterHorizontally,
                  verticalArrangement = Arrangement.Center) {
                    ChangeRoleDialog(selectedTravel, participant) { newRole ->
                      handleRoleChange(
...
