...
    participant: Map.Entry<fsUid, Profile>,
    onRoleChange: (Role) -> Unit,
) {
  Text(
      "Select a Role",
      fontWeight = FontWeight.Bold,
      modifier = Modifier.padding(8.dp).testTag("roleDialogTitle"))
  Text(
      "Current Role: ${selectedTravel!!.allParticipants[Participant(participant.key)]!!.name}",
      modifier = Modifier.padding(8.dp).testTag("roleDialogCurrentRole"))
  Button(
      modifier = Modifier.testTag("ownerButton"),
      onClick = {
        // Handle OWNER selection
        onRoleChange(Role.OWNER)
      }) {
        Text("OWNER")
      }

  Button(
      modifier = Modifier.testTag("organizerButton"),
      onClick = {
        // Handle ORGANISER selection
        onRoleChange(Role.ORGANIZER)
      }) {
        Text("ORGANISER")
      }

  Button(
      modifier = Modifier.testTag("participantButton"),
      onClick = {
        // Handle PARTICIPANT selection
        onRoleChange(Role.PARTICIPANT)
      }) {
        Text("PARTICIPANT")
      }
...
    changeRoleAction: (Boolean) -> Unit,
    removeParticipantAction: () -> Unit
) {
  Text(
      text = "Role : ${selectedTravel!!.allParticipants[Participant(participant.key)]!!.name}",
      fontWeight = FontWeight.Bold,
      modifier = Modifier.padding(8.dp).testTag("participantDialogRole"))
  // we just expand the other dialog
  Button(onClick = { changeRoleAction(true) }, modifier = Modifier.testTag("changeRoleButton")) {
    Text("Change Role")
  }

  Button(
      modifier = Modifier.testTag("removeParticipantButton"),
      onClick = {
        // Handle Remove participant
        removeParticipantAction()
      }) {
        Text("Remove participant")
      }
...
