...
    onClick: () -> Unit
) {

  Column(
      modifier =
          Modifier.fillMaxWidth()
              .testTag("participantColumn")
              .clickable { onClick() }
              .padding(10.dp) // Apply padding for the entire column
      ) {
        // Icon on top
        Icon(
            imageVector = Icons.Default.Person,
...
